iOS: Moved more theme values into GlobalTheme. Updated player view scroll views.
Related to issue #405.

--- a/MPfm/MPfm.iOS/XIB/iPhone/LoopsViewController_iPhone.xib
+++ b/MPfm/MPfm.iOS/XIB/iPhone/LoopsViewController_iPhone.xib
@@ -192,6 +192,14 @@
 					<int key="connectionID">14</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">viewBackground</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="574708960"/>
+					</object>
+					<int key="connectionID">15</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">actionAddLoop:</string>
 						<reference key="source" ref="13254434"/>
@@ -271,7 +279,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">14</int>
+			<int key="maxID">15</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
