--- a/MPfm/MPfm.iOS/XIB/iPhone/EqualizerPresetsViewController_iPhone.xib
+++ b/MPfm/MPfm.iOS/XIB/iPhone/EqualizerPresetsViewController_iPhone.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1552</int>
-		<string key="IBDocument.SystemVersion">12C54</string>
+		<string key="IBDocument.SystemVersion">12D78</string>
 		<string key="IBDocument.InterfaceBuilderVersion">3084</string>
-		<string key="IBDocument.AppKitVersion">1187.34</string>
-		<string key="IBDocument.HIToolboxVersion">625.00</string>
+		<string key="IBDocument.AppKitVersion">1187.37</string>
+		<string key="IBDocument.HIToolboxVersion">626.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">2083</string>
@@ -13,6 +13,7 @@
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
 			<string>IBUILabel</string>
+			<string>IBUISlider</string>
 			<string>IBUISwitch</string>
 			<string>IBUITableView</string>
 			<string>IBUIView</string>
@@ -40,11 +41,12 @@
 					<object class="IBUITableView" id="212150080">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{0, 41}, {320, 419}}</string>
+						<string key="NSFrame">{{0, 100}, {320, 360}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<object class="NSColor" key="IBUIBackgroundColor">
+						<object class="NSColor" key="IBUIBackgroundColor" id="640447538">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
@@ -65,7 +67,7 @@
 							<object class="IBUISwitch" id="526811025">
 								<reference key="NSNextResponder" ref="528357423"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{121, 6}, {94, 27}}</string>
+								<string key="NSFrame">{{187, 60}, {94, 27}}</string>
 								<reference key="NSSuperview" ref="528357423"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="212150080"/>
@@ -79,7 +81,7 @@
 							<object class="IBUILabel" id="327924497">
 								<reference key="NSNextResponder" ref="528357423"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{10, 8}, {122, 21}}</string>
+								<string key="NSFrame">{{76, 62}, {122, 21}}</string>
 								<reference key="NSSuperview" ref="528357423"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="526811025"/>
@@ -90,29 +92,74 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText">Equalizer Bypass</string>
-								<object class="NSColor" key="IBUITextColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MCAwIDAAA</bytes>
-									<string key="IBUIColorCocoaTouchKeyPath">darkTextColor</string>
-								</object>
+								<reference key="IBUITextColor" ref="640447538"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="558032999">
 									<int key="type">1</int>
 									<double key="pointSize">14</double>
 								</object>
-								<object class="NSFont" key="IBUIFont">
+								<object class="NSFont" key="IBUIFont" id="581947941">
 									<string key="NSName">Helvetica</string>
 									<double key="NSSize">14</double>
 									<int key="NSfFlags">16</int>
 								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
+							<object class="IBUILabel" id="864358337">
+								<reference key="NSNextResponder" ref="528357423"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{76, 14}, {115, 21}}</string>
+								<reference key="NSSuperview" ref="528357423"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="1007040312"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<string key="IBUIText">Master Volume</string>
+								<reference key="IBUITextColor" ref="640447538"/>
+								<nil key="IBUIHighlightedColor"/>
+								<int key="IBUIBaselineAdjustment">0</int>
+								<reference key="IBUIFontDescription" ref="558032999"/>
+								<reference key="IBUIFont" ref="581947941"/>
+								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+							</object>
+							<object class="IBUISlider" id="1007040312">
+								<reference key="NSNextResponder" ref="528357423"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{181, 14}, {127, 23}}</string>
+								<reference key="NSSuperview" ref="528357423"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="327924497"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<int key="IBUIContentHorizontalAlignment">0</int>
+								<int key="IBUIContentVerticalAlignment">0</int>
+								<float key="IBUIValue">0.5</float>
+							</object>
+							<object class="IBUIView" id="872686266">
+								<reference key="NSNextResponder" ref="528357423"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrameSize">{64, 100}</string>
+								<reference key="NSSuperview" ref="528357423"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="864358337"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<object class="NSColor" key="IBUIBackgroundColor">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MAA</bytes>
+								</object>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+							</object>
 						</array>
-						<string key="NSFrameSize">{320, 40}</string>
+						<string key="NSFrameSize">{320, 100}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="327924497"/>
+						<reference key="NSNextKeyView" ref="872686266"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -175,6 +222,22 @@
 					</object>
 					<int key="connectionID">55</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">lblMasterVolume</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="864358337"/>
+					</object>
+					<int key="connectionID">60</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">sliderMasterVolume</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="1007040312"/>
+					</object>
+					<int key="connectionID">61</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -213,8 +276,11 @@
 						<int key="objectID">50</int>
 						<reference key="object" ref="528357423"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="327924497"/>
+							<reference ref="872686266"/>
 							<reference ref="526811025"/>
+							<reference ref="327924497"/>
+							<reference ref="864358337"/>
+							<reference ref="1007040312"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
 					</object>
@@ -226,6 +292,21 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">52</int>
 						<reference key="object" ref="327924497"/>
+						<reference key="parent" ref="528357423"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">56</int>
+						<reference key="object" ref="864358337"/>
+						<reference key="parent" ref="528357423"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">58</int>
+						<reference key="object" ref="1007040312"/>
+						<reference key="parent" ref="528357423"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">59</int>
+						<reference key="object" ref="872686266"/>
 						<reference key="parent" ref="528357423"/>
 					</object>
 				</array>
@@ -240,12 +321,15 @@
 				<string key="50.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="51.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="52.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="56.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="58.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="59.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">55</int>
+			<int key="maxID">62</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -254,6 +338,8 @@
 					<string key="superclassName">UIViewController</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="lblBypass">UILabel</string>
+						<string key="lblMasterVolume">UILabel</string>
+						<string key="sliderMasterVolume">UISlider</string>
 						<string key="switchBypass">UISwitch</string>
 						<string key="tableView">UITableView</string>
 						<string key="viewOptions">UIView</string>
@@ -262,6 +348,14 @@
 						<object class="IBToOneOutletInfo" key="lblBypass">
 							<string key="name">lblBypass</string>
 							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="lblMasterVolume">
+							<string key="name">lblMasterVolume</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="sliderMasterVolume">
+							<string key="name">sliderMasterVolume</string>
+							<string key="candidateClassName">UISlider</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="switchBypass">
 							<string key="name">switchBypass</string>
