iOS: Added MPfmEqualizerPresetGraphView and MPfmOutputMeterView controls. Output Meter is not finished yet (problems with CPU performance), but the Preset Graph is already looking really good! Player: Added GetMixerData for output meters.
Related to issue #397, issue #405 and issue #417.

--- a/MPfm/MPfm.iOS/XIB/iPhone/EqualizerPresetDetailsViewController_iPhone.xib
+++ b/MPfm/MPfm.iOS/XIB/iPhone/EqualizerPresetDetailsViewController_iPhone.xib
@@ -219,6 +219,14 @@
 					</object>
 					<int key="connectionID">21</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">presetGraph</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="862625279"/>
+					</object>
+					<int key="connectionID">23</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -296,6 +304,7 @@
 				<string key="10.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="22.CustomClassName">MPfmEqualizerPresetGraphView</string>
 				<string key="22.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -304,7 +313,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">22</int>
+			<int key="maxID">23</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -314,6 +323,7 @@
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="btnReset">UIBarButtonItem</string>
 						<string key="lblPresetName">UILabel</string>
+						<string key="presetGraph">MPfmEqualizerPresetGraphView</string>
 						<string key="scrollView">UIScrollView</string>
 						<string key="toolbar">UIToolbar</string>
 						<string key="txtPresetName">UITextField</string>
@@ -327,6 +337,10 @@
 						<object class="IBToOneOutletInfo" key="lblPresetName">
 							<string key="name">lblPresetName</string>
 							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="presetGraph">
+							<string key="name">presetGraph</string>
+							<string key="candidateClassName">MPfmEqualizerPresetGraphView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="scrollView">
 							<string key="name">scrollView</string>
@@ -348,6 +362,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/EqualizerPresetDetailsViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">MPfmEqualizerPresetGraphView</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MPfmEqualizerPresetGraphView.h</string>
 					</object>
 				</object>
 			</array>
