--- a/MPfm/MPfm.iOS/XIB/iPhone/EqualizerPresetsViewController_iPhone.xib
+++ b/MPfm/MPfm.iOS/XIB/iPhone/EqualizerPresetsViewController_iPhone.xib
@@ -242,6 +242,14 @@
 					</object>
 					<int key="connectionID">61</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">outputMeter</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="872686266"/>
+					</object>
+					<int key="connectionID">63</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -327,13 +335,14 @@
 				<string key="52.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="56.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="58.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="59.CustomClassName">MPfmOutputMeterView</string>
 				<string key="59.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">62</int>
+			<int key="maxID">63</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -343,6 +352,7 @@
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="lblBypass">UILabel</string>
 						<string key="lblMasterVolume">UILabel</string>
+						<string key="outputMeter">MPfmOutputMeterView</string>
 						<string key="sliderMasterVolume">UISlider</string>
 						<string key="switchBypass">UISwitch</string>
 						<string key="tableView">UITableView</string>
@@ -356,6 +366,10 @@
 						<object class="IBToOneOutletInfo" key="lblMasterVolume">
 							<string key="name">lblMasterVolume</string>
 							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="outputMeter">
+							<string key="name">outputMeter</string>
+							<string key="candidateClassName">MPfmOutputMeterView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="sliderMasterVolume">
 							<string key="name">sliderMasterVolume</string>
@@ -377,6 +391,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/EqualizerPresetsViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">MPfmOutputMeterView</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MPfmOutputMeterView.h</string>
 					</object>
 				</object>
 			</array>
